fix[Auth] : Add CORS configuration (second try)